Fix logo blurriness on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,8 @@
 img {
   margin-left: auto;
   margin-right: auto;
+  width: 64px;
+  height: 64px;
 }
 
 .navbar {
@@ -16,7 +18,7 @@ img {
 }
 
 img:hover {
-  filter: brightness(120%);
+  filter: brightness(110%);
 }
 
 a {
